--- a/luck.tex
+++ b/luck.tex
@@ -71,11 +71,39 @@ Similarly for sexual and natural selection.
        }
 \end{enumerate}
 \subsection{Slow Process of Evolution}
-Slow process: Go slowly by accumulation of mutations across many generations/across long periods of time
-For most species, evolution is a slow process as it takes many generations for mutations to accumulate and create something complicated, such as an eye or a wing. () rare events of mutations -> takes a long period of time
+Evolution is a slow process as it goes slowly by accumulation of mutations across many generations/across long periods of time
+For most species, evolution is a slow process as it takes many generations for mutations to accumulate and create something complicated, such as an eye or a wing.  rare events of mutations -> takes a long period of time
+\subsection{Evolution by natural selection criteria (nurse 2020)}
+\begin{itemize}
+ \item {
+       First, they must be able to reproduce.
+       }
+ \item {
+       Second, they must have a hereditary system, whereby information defining the
+       characteristics of the organism is copied and inherited during their reproduction.
+       }
+       \item{
+                   Third, the hereditary system must exhibit variability, and this variability must be
+                   inherited during the reproductive process. It is this variability that natural selection
+                   operates upon. It transforms a slow and randomly generated source of variability into the
+                   apparently boundless and constantly changing range of life forms that flourish around us.
+                   Additionally, for this to work efficiently, living organisms must die. That way, the next
+                   generation, potentially containing genetic variants that give them a competitive edge, can
+                   replace them
+                   
+                   
+             }
+\end{itemize}
+
 \section{Luck and Circumstance at birth}
+\subsection{People dont rise from nothing}
+We do owe something to parentage and patronage. The people who stand before kings may look like they did it all by themselves. But, in face they are invariably the beneficiaries of hidden advantages and extraordinary opportunities and cultural legacies that allow them to learn and work hard and make sense of the world in ways others cannot. (gladwell, M 2008 pg 21)
+\subsection{the Matthew effect}
+It is those who are successful, in other words, who are most likely to be given the kinds of speical opportunities that lead to further success. It's the rich who get the biggest tax breaks. It's the best students who get the best teachers and most attention. And it's the biggest nine and 10 year olds who get the most coaching and practice. Success is the result of what sociologists like to call an accumulated advantage. The professional hockey players starts out a little bit bigger, and that edge in turn leads to another opportunity, which makes the initially small difference bigger still and so on and so on until the hockey player is a genuine outlier.
+
 \subsection{Relative Age phenomenon}
-The relative age phenomenon is the skill difference within a grouping of children by calender year between children born in the earlier part of the year and later part of the year, due to cutoff dates which separate different ages
+In any elite group of hockey players, 40 percent of the players will have been born between January and March, 30 percent between April and June, 20 percent between July and September, and 10 percent between October and December (gladwell, M 2008 pg 21)
+\\The relative age phenomenon is the skill difference within a grouping of children by calender year between children born in the earlier part of the year and later part of the year, due to cutoff dates which separate different ages
 At a young age, a difference in say, 10 months, could make a huge difference in physical maturity (Hockey league, outliers p21; about education, outliers p30\&31)
 Soln: Outliers p 35? Separate leagues (two leagues for same calender year, one first half one second half); for schools, breaking them down by month of birth (outliser, p36)
 Singapore parallels: Gifted Ed test
