Add in additional updates

--- a/luck.tex
+++ b/luck.tex
@@ -98,8 +98,12 @@ For most species, evolution is a slow process as it takes many generations for m
 \section{Luck and Circumstance at birth}
 \subsection{People dont rise from nothing}
 We do owe something to parentage and patronage. The people who stand before kings may look like they did it all by themselves. But, in face they are invariably the beneficiaries of hidden advantages and extraordinary opportunities and cultural legacies that allow them to learn and work hard and make sense of the world in ways others cannot. (gladwell, M 2008 pg 21)
-\subsection{the Matthew effect}
-It is those who are successful, in other words, who are most likely to be given the kinds of speical opportunities that lead to further success. It's the rich who get the biggest tax breaks. It's the best students who get the best teachers and most attention. And it's the biggest nine and 10 year olds who get the most coaching and practice. Success is the result of what sociologists like to call an accumulated advantage. The professional hockey players starts out a little bit bigger, and that edge in turn leads to another opportunity, which makes the initially small difference bigger still and so on and so on until the hockey player is a genuine outlier.
+\subsection{The American Nightmare}
+The rosy American view does not reflect reality today in the united states. Along with the general stagnation at the bottom, intergenerational mobility has declined sharply in the US. Mobility is now substantially lower in the United States than it is un Europe. WIthin the OECD, the child from the bottom quintile most likely to remain stuck in the bottom quintile is from the US. (31.1 percent) (Economics for hard times, 2019) page 258
+\subsection{Effects of Surname on Academic success}
+Of the top 35 US economics departments, faculty with earlier surname initials are significantly more likely to receive tenure at top ten economics departments, are significantly more likely to become fellows of the econometric society, and to a lesser extent, are more likely to receive the Clark Medal and the Nobel prize.
+\subsection{The Matthew effect}
+It is those who are successful, in other words, who are most likely to be given the kinds of speical opportunities that lead to further success. It's the rich who get the biggest tax breaks. It's the best students who get the best teachers and most attention. And it's the biggest nine and 10 year olds who get the most coaching and practice. Success is the result of what sociologists like to call an accumulated advantage. The professional hockey players starts out a little bit bigger, and that edge in turn leads to another opportunity, which makes the initially small difference bigger still and so on and so on until the hockey player is a genuine outlier. (gladwell, M 2008 pg 21)
 
 \subsection{Relative Age phenomenon}
 In any elite group of hockey players, 40 percent of the players will have been born between January and March, 30 percent between April and June, 20 percent between July and September, and 10 percent between October and December (gladwell, M 2008 pg 21)
