final update files

--- a/luck.tex
+++ b/luck.tex
@@ -129,6 +129,15 @@ The country faces a loss of talent and individuals that were the driving forces 
 
 
 The problem is that from the global perspective, this approach to migration is heavily discriminatory. To one set of “discriminations,” the citizenship rent, we add another set of discriminations whereby this rent may also be enjoyed by those who were not lucky enough to have been born in a rich country but have exceptional abilities or wealth. We run the risk that such policies will result in the poor world, and I am thinking especially of Africa here, becoming even poorer as its most educated and wealthiest members leave. (Milanovic, 2016, p. 136)
+\subsection{Ban The Box (race)}
+A recent study on the impact of ban the box policies on the rate of unemployment of young black men provides a compelling demonstration of statistical discrimination. (good economics for hard times)
+
+The Ban the Box policy substantially increased racial disparities in callbacks. White applicants to BTB-affected employers received 7 percent more calbacks than similar black applicants before BTB. After BTB, this gap grew to 43 percent.
+
+\subsection{Asian Americans Harvard discrimination (race)}
+Asian americans were suing harvard for discrimination, on the grounds that, in order to achieve its diversity goals, Harvard  artificially limits the number of Asian American students it admits. (good economics for hard times)
+
+Asian students systematically have higher academic and extra-curricular ratings, but lower personality ratings, and once we account for that they are no less likely to be admitted than white students. For Card, this proves there is no discrimination. Archidiacono contends that the personality rating is exactly the way Harvard discriminates against Asians. (good economics for hard times)
 \section{Luck and Social Mobility}
 \subsection{Rat Race equilibrium}
 
