add in luck and causality section

--- a/luck.tex
+++ b/luck.tex
@@ -261,10 +261,19 @@ We need to recognize that although the sensation of free will is real, the capac
        To sum up: We are physical beings made of large collections of particles governed by nature's laws. Everything we do and everything we think amounts to motions of those particles.
        Our choices seem free because we do not witness nature's laws acting in their most fundamental guise;
        (Greene, 2020, p.150)
-       
-       
-       
        }
 \end{itemize}
+\section{Luck and Causality}
+Fooled by Randomness, Taleb prologue xlii
+\begin{itemize}
+ \item {
+       There is one world in which I believe the habit of mistaking luck for skill is most prevalent, and most conspicuous and that is the world of markets.
+       }
+ \item {Frequently, these delusions are intentional and deserve to bear the name charlatanism}
+\end{itemize}
+
+
+
+
 
 \end{document}
