update luck documentation.

--- a/luck.tex
+++ b/luck.tex
@@ -264,16 +264,41 @@ We need to recognize that although the sensation of free will is real, the capac
        }
 \end{itemize}
 \section{Luck and Causality}
-Fooled by Randomness, Taleb prologue xlii
+\subsection{
+ Fooled by Randomness, Taleb prologue
+}
 \begin{itemize}
  \item {
        There is one world in which I believe the habit of mistaking luck for skill is most prevalent, and most conspicuous and that is the world of markets.
        }
  \item {Frequently, these delusions are intentional and deserve to bear the name charlatanism}
+ \item {
+       We are faulty, and there is no need to bother trying to correct our flaws.
+       }
 \end{itemize}
+\subsection{The Drunkards Walk}
+\subsubsection{Self Induced Moving Tables}
+Faraday concluded, as the doctors had, that the sitters were unconsciously pulling and pushing the table. The movement probably began as random fidgeting. Then at some point the sitters perceived in the randomness a pattern. Human perception, Faraday recognised, is not a direct consequence of reality but rather an act of imagination. Perception requires imagination because the data people encounter in their lives are never complete and always equivocal. (The drunkards walk page 170)
 
-
-
-
-
+\subsubsection{Confirmation Bias}
+\begin{itemize}
+ \item {
+       Instead of searching for ways to prove our ideas wrong, we usually attempt to prove them correct. Phychologists call this the \textbf{confirmation bias} (the drunkards walk page 189)
+       }
+       \item{
+                   The confirmation bias has many unfortunate consequence in the real world. When a teacher initially believes that one student is smarter than another, he selectively focuses on evidence that tends to confirm the hypothesis. (the drunkards walk page 190)
+             }
+ \item {
+       When an employer interviews a prospective candidate, the employer typically forms a quick first impression and spends the rest of the interview seeking information that supports it. (the drunkards walk page 190)
+       }
+ \item {
+       When counselors in clinical settings are adviced ahead of time that the interviewee is combative, they tend to conclude that he is even if the interviewee is no more combative than the average person.  (the drunkards walk page 190)
+       }
+       \item{
+                   And when people interpret the behavior of someone who is a member of a minority, they interpret it in the context of preconceived stereotypes. (the drunkards walk page 190)
+             }
+ \item {
+       The human brain has evolved to be very efficient at pattern recognition, but as the confirmation bias shows, we are focused on finding and confirming patterns rather than minimizing our false conclusions.(the drunkards walk page 190)
+       }
+\end{itemize}
 \end{document}
