update luck documentation.

--- a/luck.tex
+++ b/luck.tex
@@ -301,4 +301,22 @@ Faraday concluded, as the doctors had, that the sitters were unconsciously pulli
        The human brain has evolved to be very efficient at pattern recognition, but as the confirmation bias shows, we are focused on finding and confirming patterns rather than minimizing our false conclusions.(the drunkards walk page 190)
        }
 \end{itemize}
+\subsection{The black swan, Taleb}
+\subsubsection{The Anthropic Bias}
+\begin{itemize}
+ \item {
+       It is often said that the world seems to have been built to the specifications that would make our existence possible. According to such an argument, it could not come from luck. (118)
+       }
+       \item{
+                   A successful person will try to convince you that his achievements could not possibly be accidental. Just as a gambler who wins at roulette seven times in a row would explain to you that the odds against such a streak are one in several million. But if you take into account the quantity of gamblers out there, and the number of gambling sessions, then it becomes obvious that such strokes of luck are bound to happen.  (119)
+             }
+\end{itemize}
+\subsubsection{The cosmetic because}
+tldr: not everything has to be explained.
+\begin{itemize}
+ \item We are here because, the Casanova-style, the rosy scenario played out, and if it seems to hard to understand it because we are too brainwashed by notions of causality and we think that it is smarter to say \textbf{because} than to accept \textbf{randomness} (120)
+ \item My biggest problem with the educational system lies precisely in that it forces students to squeeze explanations out of subject matters and shames them for withholding judgement, for uttering the \textbf{I dont know } (120)
+ \item One cannot read that much into the process, and should learn instead to invoke soem measure of randomness. Randomness in practice, is what we don't know, to invoke randomness is to plead ignorance.
+ \item Have the \textbf{integrity} to deliver your \textbf{because} very sparingly, try to limit it to situations where the \textbf{because} is derived from experiments, not backward looking history.
+\end{itemize}
 \end{document}
