Add in luck and the marketplace

--- a/luck.tex
+++ b/luck.tex
@@ -319,4 +319,27 @@ tldr: not everything has to be explained.
  \item One cannot read that much into the process, and should learn instead to invoke soem measure of randomness. Randomness in practice, is what we don't know, to invoke randomness is to plead ignorance.
  \item Have the \textbf{integrity} to deliver your \textbf{because} very sparingly, try to limit it to situations where the \textbf{because} is derived from experiments, not backward looking history.
 \end{itemize}
+\section{Luck and the marketplace}
+\subsection{Scalability}
+\subsubsection{Some jobs are more scalable than others}
+\begin{itemize}
+ \item Some professions, such as dentists, conslutants, or massage professionals cannot be scaled. There is a cap on the number of patients or clients you can see in a given period of time. If you open a fancy restaurant, you will at best steadily fill up a room. (The black swan pg 27)
+ \item If you are an idea person, you do not have to work hard, only think intensely. You do the same work whether you produce a hundred units or a thousand. In quant trading, the same amount of work is involved in buying a hundred shares as in buying a hundred thousand, or even a million. (The black swan pg 28)
+ \item Nike, Dell and Boeing can get paid for just thinking, organizing and leveraging their know how and ideas while subcontracted factories in developing countries do the grunt work and engineers in cultured and mathematical states od the noncreative technical grind. (the black swan page 31
+\end{itemize}
+\subsection{Mediocristan}
+\begin{itemize}
+ \item In Meiocristan, nothing exciting happens.
+ \item Particular events dont contribute much individually, only collectively. When your sample is large, no single instance will significantly change the aggregate or the total. (the black swan page 32)
+ \item matters that belong to mediocristan: height, wweight, calorie comsumption, income for a baker, a small restaurant owner etc. (the black swan, page 35)
+\end{itemize}
+\subsection{Extremistan}
+\begin{itemize}
+ \item In extremistan, extreme events happen and they can dominate a phenomenon.
+ \item such extreme and powerful events that have an overwhelming impact when they occur, are called \textbf{black swan events}
+ \item In extremistan, inequalities are such that one single observation can disproportionately impact the aggregate, or the total. (the black swan, page 33)
+ \item Almost all social matters are from extremistan. It is hard to kill many people if you need to slaughter them one at a time, Today, with tools of mass destruction, all it takes is a button, a nutcase, or a small error to wipe out the planet. (the black swan, page 34)
+ \item Matters that belong to extremistan: wealth, income, book citations per author, deaths in war, planet size etc. ( the black swan, page 33)
+\end{itemize}
+
 \end{document}
