Add in luck and the marketplace

--- a/luck.tex
+++ b/luck.tex
@@ -341,5 +341,16 @@ tldr: not everything has to be explained.
  \item Almost all social matters are from extremistan. It is hard to kill many people if you need to slaughter them one at a time, Today, with tools of mass destruction, all it takes is a button, a nutcase, or a small error to wipe out the planet. (the black swan, page 34)
  \item Matters that belong to extremistan: wealth, income, book citations per author, deaths in war, planet size etc. ( the black swan, page 33)
 \end{itemize}
+\subsection{Winner takes it all effect}
+\begin{itemize}
+ \item   Inequality comes from a tournament effect: Someone who is marginally better can easily win the entire pot, leaving others with nothing. Using an argument from chapter 3, people pefer to pay 10.99 for a recording featuring horowiz to 9.99 for a struggling pianist. So it looks like a tournament, where the winner grabs the whole thing and he does not have to win by much. (the black swan page 216)
+ \item Random outcomes, or an arbitrary or an arbitrary situation, can also explain success, and provide the initial push that leads to a winner-take it all result. A person can get slightly ahead for entirely random reasons; because we like to imitate one another, we will flock to him. The world of contagion is so underestimated. (the black swan page 216)
+\end{itemize}
+\subsection{The long tail}
+\begin{itemize}
+ \item  The long tail imiplies that the small guys, collectively, should control a large segment of culture and commerce, thanks to the niches and subspecialities that can now survive thanks to the internet. But strangely, it can also imply a large measure of inequality; a large base of small guys and va very small number of supergiants, together representing a share of the worlds culture. With some of the small guys, on occasion, rising to knock out the winners. (the black swan page 224)
+ \item The long tail's contribution is not yet numerical. It is still confined to the web and its small scale online commerce. But consider how the long tail could affect the future of culture, information and political life. It could free us from the dominant policial parties, from the academic system, from the clusters of the press- anything that is currently in the hands of ossified, conceited, and self-serving authority. The long tail will help foster cognitive diversity. ( the black swan page 224)
+ \item The long tail is a by-product of extremistan that makes it some what less unfair. The worldis made no less unfair for the little guy, but now becomes exremely unfair for the big man. Nobody is truly established. The little guy is very subversive. (the black swan page 225)
+\end{itemize}
 
 \end{document}
