--- a/luck.tex
+++ b/luck.tex
@@ -352,5 +352,18 @@ tldr: not everything has to be explained.
  \item The long tail's contribution is not yet numerical. It is still confined to the web and its small scale online commerce. But consider how the long tail could affect the future of culture, information and political life. It could free us from the dominant policial parties, from the academic system, from the clusters of the press- anything that is currently in the hands of ossified, conceited, and self-serving authority. The long tail will help foster cognitive diversity. ( the black swan page 224)
  \item The long tail is a by-product of extremistan that makes it some what less unfair. The worldis made no less unfair for the little guy, but now becomes exremely unfair for the big man. Nobody is truly established. The little guy is very subversive. (the black swan page 225)
 \end{itemize}
+\section{Harnessing luck (collective financial)}
+\subsection{Global Tax on capital (thomas piketty)}
+tldr: a way of solving global inequality by tranfering wealth from the rich to the poor
+\begin{itemize}
+ \item A global tax on capital is a utopian idea. To achieve this goal, they would have to establish a tax schedule applicable to all wealth around the world and then decide how to apportion the revenues. (page 515)
+       
+ \item A global tax on capital would require a very high and no doubt unrealistic level of international cooperation. (page 515)
+ \item Protectionism and capital controls are actually unsatisfactory substitues for the ideal form of regulation, which is a global tax on capital- a solution that has the merit of preserving economic openness while effectively regulating the global economy and justly distributing the benefits among and within nations (page 516)
+ \item \textbf{for the rich} For the wealthiest people on the planet, the tax would thus be based on indiviual net worth. (page 517)
+ \item \textbf{for the rest of us} Taxable wealth would be determined by the market value of all financial assets (including bank deposits, stocks, bonds, partnerships and other forms of participation in listed and unlisted forms.) and non financial assets, net of debt. (page 517)
+ \item \textbf{drawbacks:} One drawback of these taxes is that they are based solely on realy property (financial assets are ignored,) and property is taxed at its market value regarless of debt, so that a heavily indebted person is  taxed in the same way as a person with no debt. (page 517)
+\end{itemize}
+
 
 \end{document}
