--- a/luck.tex
+++ b/luck.tex
@@ -353,7 +353,7 @@ tldr: not everything has to be explained.
  \item The long tail is a by-product of extremistan that makes it some what less unfair. The worldis made no less unfair for the little guy, but now becomes exremely unfair for the big man. Nobody is truly established. The little guy is very subversive. (the black swan page 225)
 \end{itemize}
 \section{Harnessing luck (collective financial)}
-\subsection{Global Tax on capital (thomas piketty)}
+\subsection{Global Tax on capital (thomas piketty) to resolve inequality within countries}
 tldr: a way of solving global inequality by tranfering wealth from the rich to the poor
 \begin{itemize}
  \item A global tax on capital is a utopian idea. To achieve this goal, they would have to establish a tax schedule applicable to all wealth around the world and then decide how to apportion the revenues. (page 515)
@@ -363,6 +363,14 @@ tldr: a way of solving global inequality by tranfering wealth from the rich to t
  \item \textbf{for the rich} For the wealthiest people on the planet, the tax would thus be based on indiviual net worth. (page 517)
  \item \textbf{for the rest of us} Taxable wealth would be determined by the market value of all financial assets (including bank deposits, stocks, bonds, partnerships and other forms of participation in listed and unlisted forms.) and non financial assets, net of debt. (page 517)
  \item \textbf{drawbacks:} One drawback of these taxes is that they are based solely on realy property (financial assets are ignored,) and property is taxed at its market value regarless of debt, so that a heavily indebted person is  taxed in the same way as a person with no debt. (page 517)
+\end{itemize}
+\subsection{Curb inequality in education (markovits)}
+tldr: The meritocratic inheritance is at present entirely exempted form the estate taxes that normally apply to traditional bequests: the massive investments that rich parents make in their childrens education are simply not included in their estates. Moreover, private schools and colleges are taxed as if they were charities, devoted th the public interest: alumni donations are tax-deductible, and schools and collegs pay no taxes on income from their endowments. (page 276)
+\\ The meritocratic inheritance, for its part, transfers roughly \$ 10 million untaxed to each rich kid.
+\begin{itemize}
+ \item First, private schools and universities should lose their tax-exempt status unless they draw at least half of their students from families in the bottom-two thirds of the income distribution. (page 277)
+ \item And second, schools should be encouraged to meet this requirement by expanding enrollments (page 277)
+ \item The Ivy league could met the condition for retaining not-for profit status by \textbf{doubling enrollments} (drawing new students mostly from outside the elite) and still spend about as much per student as it did in 2000. Colleges generally could increase their enrollments by half and still spend roughly as much perstudent as they did in 1970. And private schools could double their enrollments and stil have better student/ teacher ratios than their private counterparts. Public funds paid to subsidize additional students woudl lend further support to already manageable growth. (page 278)
 \end{itemize}
 
 
